doc: updated code and api documentation
